--- a/podfile
+++ b/podfile
@@ -9,5 +9,8 @@ target 'EdulineV5' do
     pod 'Masonry', '1.1.0'
     pod 'YYKit', '1.0.9'
     pod 'TZImagePickerController', '3.2.7'
+    pod 'MBProgressHUD', '1.0.0'
+    pod 'SVProgressHUD', '1.1.3'
+#    pod 'MBProgressHUD+Add', '0.0.2'
 
 end
