--- a/podfile
+++ b/podfile
@@ -11,6 +11,7 @@ target 'EdulineV5' do
     pod 'TZImagePickerController', '3.2.7'
     pod 'MBProgressHUD', '1.0.0'
     pod 'SVProgressHUD', '1.1.3'
+    pod 'TYAttributedLabel', '2.6.6'
 #    pod 'MBProgressHUD+Add', '0.0.2'
 
 end
