--- a/podfile
+++ b/podfile
@@ -10,8 +10,8 @@ target 'EdulineV5' do
     pod 'YYKit', '1.0.9'
     pod 'TZImagePickerController', '3.2.7'
     pod 'MBProgressHUD', '1.0.0'
-    pod 'SVProgressHUD', '1.1.3'
-    pod 'TYAttributedLabel', '2.6.6'
+#    pod 'SVProgressHUD', '1.1.3'
+#    pod 'TYAttributedLabel', '2.6.2'
 #    pod 'MBProgressHUD+Add', '0.0.2'
 
 end
