--- a/EdulineV5/Info.plist
+++ b/EdulineV5/Info.plist
@@ -11,7 +11,8 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>EdulineV5</string>
+	<string>
+eduline网校</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
@@ -22,10 +23,10 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.seition.eduline_V5</string>
+			<string>com.seition.edulineV5</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.seition.eduline_V5</string>
+				<string>com.seition.edulineV5</string>
 			</array>
 		</dict>
 	</array>
