code:一键登录初步完成

--- a/EdulineV5/Info.plist
+++ b/EdulineV5/Info.plist
@@ -11,8 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>
-eduline网校</string>
+	<string>eduline网校</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
