--- a/podfile
+++ b/podfile
@@ -16,7 +16,7 @@ target 'EdulineV5' do
     pod 'LBXScan/LBXNative','~> 2.3'
     pod 'LBXScan/UI','~> 2.3'
     pod 'LXReorderableCollectionViewFlowLayout','~> 0.2.1'
-    
+    pod 'Bugly'
 #    pod 'SVProgressHUD', '1.1.3'
 #    pod 'TYAttributedLabel', '2.6.2'
 #    pod 'MBProgressHUD+Add', '0.0.2'
