--- a/podfile
+++ b/podfile
@@ -17,6 +17,23 @@ target 'EdulineV5' do
     pod 'LBXScan/UI','~> 2.3'
     pod 'LXReorderableCollectionViewFlowLayout','~> 0.2.1'
     pod 'Bugly'
+    
+    pod 'UMCCommon'
+    # U-Share SDK UI模块（分享面板，建议添加）
+    pod 'UMCShare/UI'
+    # 集成微信(精简版0.2M)
+#    pod 'UMCShare/Social/ReducedWeChat'
+    # 集成微信(完整版14.4M)
+    pod 'UMCShare/Social/WeChat'
+    # 集成QQ/QZone/TIM(精简版0.5M)
+#    pod 'UMCShare/Social/ReducedQQ'
+    # 集成QQ/QZone/TIM(完整版7.6M)
+    pod 'UMCShare/Social/QQ'
+    # 集成新浪微博(精简版1M)
+#    pod 'UMCShare/Social/ReducedSina'
+    # 集成新浪微博(完整版25.3M)
+    pod 'UMCShare/Social/Sina'
+#    pod 'UMCSecurityPlugins'
 #    pod 'SVProgressHUD', '1.1.3'
 #    pod 'TYAttributedLabel', '2.6.2'
 #    pod 'MBProgressHUD+Add', '0.0.2'
