--- a/podfile
+++ b/podfile
@@ -33,6 +33,10 @@ target 'EdulineV5' do
 #    pod 'UMCShare/Social/ReducedSina'
     # 集成新浪微博(完整版25.3M)
     pod 'UMCShare/Social/Sina'
+    #直播
+    pod 'TEduBoard_iOS'
+    pod 'TXIMSDK_iOS'
+    pod 'TXLiteAVSDK_TRTC'
 #    pod 'UMCSecurityPlugins'
 #    pod 'SVProgressHUD', '1.1.3'
 #    pod 'TYAttributedLabel', '2.6.2'
