--- a/EdulineV5/Info.plist
+++ b/EdulineV5/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>App会在直播间连麦的功能时,访问您的麦克风权限</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>App会在使用修改用户头像、保存图片到本地功能时,访问您的相机权限</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
