--- a/podfile
+++ b/podfile
@@ -1,4 +1,5 @@
 platform :ios ,'9.0'
+source 'https://github.com/CocoaPods/Specs.git'
 
 target 'EdulineV5' do
 
@@ -34,9 +35,9 @@ target 'EdulineV5' do
     # 集成新浪微博(完整版25.3M)
     pod 'UMCShare/Social/Sina'
     #直播
-    pod 'TEduBoard_iOS'
-    pod 'TXIMSDK_iOS'
-    pod 'TXLiteAVSDK_TRTC'
+    pod 'TEduBoard_iOS','2.4.6.1'
+    pod 'TXIMSDK_iOS','4.6.101'
+    pod 'TXLiteAVSDK_TRTC','6.9.8341'
 #    pod 'UMCSecurityPlugins'
 #    pod 'SVProgressHUD', '1.1.3'
 #    pod 'TYAttributedLabel', '2.6.2'
