--- a/podfile
+++ b/podfile
@@ -35,9 +35,12 @@ target 'EdulineV5' do
     # 集成新浪微博(完整版25.3M)
     pod 'UMCShare/Social/Sina'
     #直播
-    pod 'TEduBoard_iOS','2.4.6.1'
-    pod 'TXIMSDK_iOS','4.6.101'
-    pod 'TXLiteAVSDK_TRTC','6.9.8341'
+#    pod 'TEduBoard_iOS','2.4.6.1'
+#    pod 'TXIMSDK_iOS','4.6.101'
+#    pod 'TXLiteAVSDK_TRTC','6.9.8341'
+    pod 'TEduBoard_iOS','2.4.8.5'
+    pod 'TXIMSDK_iOS','4.8.10'
+    pod 'TXLiteAVSDK_TRTC','7.2.8940'
 #    pod 'UMCSecurityPlugins'
 #    pod 'SVProgressHUD', '1.1.3'
 #    pod 'TYAttributedLabel', '2.6.2'
