--- a/podfile
+++ b/podfile
@@ -45,5 +45,6 @@ target 'EdulineV5' do
 #    pod 'SVProgressHUD', '1.1.3'
 #    pod 'TYAttributedLabel', '2.6.2'
 #    pod 'MBProgressHUD+Add', '0.0.2'
+    pod 'WechatOpenSDK'
 
 end
