--- a/EdulineV5/Info.plist
+++ b/EdulineV5/Info.plist
@@ -126,8 +126,10 @@
 	<array>
 		<string>audio</string>
 	</array>
-	<key>UILaunchImageFile</key>
-	<string>LaunchImage</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
