code:导入声网sdk、将UserModel替换成V5_UserModel

--- a/podfile
+++ b/podfile
@@ -47,5 +47,14 @@ target 'EdulineV5' do
 #    pod 'MBProgressHUD+Add', '0.0.2'
     pod 'WechatOpenSDK'
     pod 'AlipaySDK-iOS'
+    
+    #声网直播相关
+    use_frameworks!
+    pod 'Whiteboard', '2.6.4'
+    pod 'AgoraRtcEngine_iOS', '2.9.0.102'
+    pod 'AgoraRtm_iOS', '~> 1.2.2'
+    
+    pod 'CocoaLumberjack'
+    pod 'AliyunOSSiOS'
 
 end
