--- a/EdulineV5/Info.plist
+++ b/EdulineV5/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Privacy - Local Network Usage Description</key>
-	<string>APP不会连接到您所用网络上的设备,只会检测与您本地网关的连通性</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -13,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>eduline网校</string>
+	<string>Eduline网校</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
@@ -59,20 +57,20 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
-        <string>tim</string>
-        <string>timapi</string>
-        <string>timopensdkfriend</string>
-        <string>timwpa</string>
-        <string>timgamebindinggroup</string>
-        <string>timapiwallet</string>
-        <string>timOpensdkSSoLogin</string>
-        <string>wtlogintim</string>
-        <string>timopensdkgrouptribeshare</string>
-        <string>timopensdkapiV4</string>
-        <string>timgamebindinggroup</string>
-        <string>timopensdkdataline</string>
-        <string>wtlogintimV1</string>
-        <string>timapiV1</string>
+		<string>tim</string>
+		<string>timapi</string>
+		<string>timopensdkfriend</string>
+		<string>timwpa</string>
+		<string>timgamebindinggroup</string>
+		<string>timapiwallet</string>
+		<string>timOpensdkSSoLogin</string>
+		<string>wtlogintim</string>
+		<string>timopensdkgrouptribeshare</string>
+		<string>timopensdkapiV4</string>
+		<string>timgamebindinggroup</string>
+		<string>timopensdkdataline</string>
+		<string>wtlogintimV1</string>
+		<string>timapiV1</string>
 		<string>weixinULAPI</string>
 		<string>wechat</string>
 		<string>weixin</string>
@@ -138,6 +136,8 @@
 	<string>App会在使用修改用户头像、保存图片到本地功能时,访问您的相机权限</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>App会在使用修改用户头像、保存图片到本地功能时,访问您的相机权限</string>
+	<key>Privacy - Local Network Usage Description</key>
+	<string>APP不会连接到您所用网络上的设备,只会检测与您本地网关的连通性</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
