--- a/EdulineV5/Info.plist
+++ b/EdulineV5/Info.plist
@@ -130,6 +130,10 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>App会在使用修改用户头像、保存图片到本地功能时,访问您的相机权限</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App需要您的同意,才能在使用期间访问位置</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>App会在直播间连麦的功能时,访问您的麦克风权限</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
