--- a/podfile
+++ b/podfile
@@ -47,7 +47,7 @@ use_frameworks!
 #    pod 'TYAttributedLabel', '2.6.2'
 #    pod 'MBProgressHUD+Add', '0.0.2'
     pod 'WechatOpenSDK'
-    pod 'AlipaySDK-iOS'
+    pod 'AlipaySDK-iOS', '15.8.11'
     
     #声网直播相关
     use_frameworks!
@@ -55,8 +55,8 @@ use_frameworks!
     pod 'AgoraRtcEngine_iOS', '2.9.0.102'
     pod 'AgoraRtm_iOS', '~> 1.2.2'
     
-    pod 'CocoaLumberjack'
-    pod 'AliyunOSSiOS'
+    pod 'CocoaLumberjack', '3.7.4'
+    pod 'AliyunOSSiOS', '2.10.16'
     
     #cc直播
     pod 'CCLivePlaySDK', '~> 3.17.2'
